--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "profix",
+  "name": "profesional-cercano",
   "main": "index.js",
-  "version": "1.0.13",
+  "version": "1.0.31",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
